--- a/algorithm-visualizer/vercel.json
+++ b/algorithm-visualizer/vercel.json
@@ -1,8 +1,9 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
+  "devCommand": "npm run dev",
   "installCommand": "npm install",
+  "framework": null,
   "rewrites": [
     {
       "source": "/(.*)",
